# YouTube-mcp

./: .env.example  .gitignore  CLAUDE.md  Explanations.md  Learnings.md  Low_Level_Architecture_Guide.md  PROJECT_LOG.md  README.md  Reusable_prompts_and_Recommendations.md  prompts.md  pyproject.toml
src/youtube_mcp/: __init__.py  server.py  utils.py  youtube_client.py
tests/: test_functions.py
